--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <title>Yapabilirsin</title>
+    <title>Yapabilirsin izmi</title>
     <meta charset="UTF-8">
     </head>
         <body bgcolor="silver">
@@ -11,10 +11,10 @@
                 <a href="index.html"> <img src="foto/logo.jpg"/ width="120" height="120"> </a>
               </td>
               <td align="right" valign="bottom" width="200">
-                <a href="index.html">ANASAYFA</a>
+                <a href="index.html">ANA SAYFA</a>
               </td>
               <td align="right" valign="bottom" width="200">
-                <a href="iletisim.html">İLETİŞİM</a>
+                <a href="iletisim.html">İLETİŞmek</a>
               </td>
             </tr>
           </table>
